--- a/html/css/contacto.css
+++ b/html/css/contacto.css
@@ -44,13 +44,13 @@ span#e24            { /* patrodent001008.gif */
 	width           : 459.00pt;
 	height          :  15.00pt;
 	}
-h4#e23              { /* Plano de Situación */
+div#mapa_texto              { /* Plano de Situación */
 	font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	color           : #ffffff;
 	text-align      : center;
 	position        : absolute;
 	left            : 105.00pt;
-    top             : 280.00pt;
+    top             : 350.00pt;
 	width           : 459.00pt;
 	height          :  20.25pt;
 	}
@@ -66,19 +66,33 @@ span#e21            { /* patrodent2001001.jpg */
 	width           : 563.25pt;
 	height          :  89.25pt;
 	}
-h4#e1               { /* Plano de Situación */
-	font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
-	text-align      : center;
-	position        : absolute;
-	left            : 105.00pt;
-	top             : 147.75pt;
-	width           : 459.00pt;
-	height          :  20.25pt;
-	}
 a.maps {
     position        : absolute;
     margin-top      : 5pt;
     left            : 13pt;
+}
+#direccion {
+    top: 247pt;
+}
+#mapa {
+    top: 317pt;
+}
+#direccion_texto {
+    top: 280pt;
+    position: absolute;
+    left: 120pt;
+}
+#direccion_texto p {
+    margin-bottom: 0pt;
+}
+div#page {
+    height: 665pt;
+}
+div.volver {
+    top: 626pt;
+}
+div.copy {
+    top: 647.75pt;
 }
 
 /*--- EndOfFile ---*/
