Elimino una fuente extraña que hace que se vea diferente en diferentes navegadores

--- a/html/css/atm.css
+++ b/html/css/atm.css
@@ -5,12 +5,12 @@
 	color           : #400000;
 	}
 .cc123              { /* Common */
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	color           : #972508;
 	text-align      : right;
 	}
 .cc124              { /* Common */
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	color           : #972508;
 	text-align      : center;
 	}
