--- a/html/css/quien_soy.css
+++ b/html/css/quien_soy.css
@@ -4,7 +4,7 @@
 	border          :   2.25pt solid #d3c2be;
 	}
 .cc20               { /* Common */
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	color           : #972508;
 	text-align      : right;
 	}
