--- a/html/css/contacto.css
+++ b/html/css/contacto.css
@@ -45,7 +45,7 @@ span#e24            { /* patrodent001008.gif */
 	height          :  15.00pt;
 	}
 div#mapa_texto              { /* Plano de Situación */
-	font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 14pt Arial, sans-serif;
 	color           : #ffffff;
 	text-align      : center;
 	position        : absolute;
