--- a/html/css/patrodent.css
+++ b/html/css/patrodent.css
@@ -67,29 +67,29 @@ table.ct07          { /* Document Style */
 	}
 table.ct07 caption  { /* Document Style */
 	color           : #000000;
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	}
 table.ct07 td       { /* Document Style */
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 table.ct07 th       { /* Document Style */
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	background-color: #ffffff;
 	}
 table.ct07 .ch07 th { /* Document Style */
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	background-color: #ffffff;
 	}
 .address,address    {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .citation,cite      {
 	color           : #000000;
-	font            : italic 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : italic 10pt Arial, sans-serif;
 	}
 .code,code          {
 	color           : #000000;
@@ -101,11 +101,11 @@ table.ct07 .ch07 th { /* Document Style */
 	}
 .emphasis,em        {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .footer             {
 	color           : #000000;
-	font            : 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 8pt Arial, sans-serif;
 	text-align      : center;
 	}
 .footer_box         {
@@ -113,29 +113,29 @@ table.ct07 .ch07 th { /* Document Style */
 	}
 .form_button        {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	background-color: #ffffff;
 	}
 .form_input         {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .form_label         {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .form_legend        {
 	color           : #a92508;
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	}
 .form_set           {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	background-color: #ffffff;
 	}
 .header             {
 	color           : #a92508;
-	font            : 20pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 20pt Arial, sans-serif;
 	}
 .header_box         {
 	color           : #ffffff;
@@ -143,42 +143,42 @@ table.ct07 .ch07 th { /* Document Style */
 	}
 .heading1,h1        {
 	color           : #000000;
-	font            : 22pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 22pt Arial, sans-serif;
 	}
 .heading2,h2        {
 	color           : #000000;
-	font            : 18pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 18pt Arial, sans-serif;
 	}
 .heading3,h3        {
 	color           : #4a4c52;
-	font            : 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 14pt Arial, sans-serif;
 	}
 .heading4,h4        {
 	color           : #000000;
-	font            : 12pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 12pt Arial, sans-serif;
 	}
 .heading5,h5        {
 	color           : #972508;
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	}
 .heading6,h6        {
 	color           : #000000;
-	font            : bold 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 8pt Arial, sans-serif;
 	}
 .info               {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .info_box           {
 	background-color: #d8d8d8;
 	}
 .info_tag           {
 	color           : #972508;
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	}
 .item               {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .item_box           {
 	color           : #d6d6d6;
@@ -186,22 +186,22 @@ table.ct07 .ch07 th { /* Document Style */
 	}
 .item_tag           {
 	color           : #972508;
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	}
 .logo               {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .logo_box           {
 	background-color: #f0f0f0;
 	}
 .logo_tag           {
 	color           : #000000;
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	}
 .navigation         {
 	color           : #dfe5f8;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .navigation_box     {
 	color           : #8a8d95;
@@ -209,22 +209,22 @@ table.ct07 .ch07 th { /* Document Style */
 	}
 .navigation_tag     {
 	color           : #dfe5f8;
-	font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 10pt Arial, sans-serif;
 	}
 .news               {
 	color           : #000000;
-	font            : 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 8pt Arial, sans-serif;
 	}
 .news_box           {
 	background-color: #cfcfcf;
 	}
 .news_tag           {
 	color           : #97253d;
-	font            : bold 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : bold 8pt Arial, sans-serif;
 	}
 .page               {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	background-color: #ffffff;
 	}
 .page a             {
@@ -237,7 +237,7 @@ table.ct07 .ch07 th { /* Document Style */
 	}
 .page_tag           {
 	color           : #972508;
-	font            : 16pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 16pt Arial, sans-serif;
 	}
 .page_tag a         {
 	background-color: transparent;
@@ -246,25 +246,25 @@ table.ct07 .ch07 th { /* Document Style */
 	}
 .panel              {
 	color           : #3c3c3c;
-	font            : 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 8pt Arial, sans-serif;
 	}
 .panel_box          {
 	background-color: #d3c2be;
 	}
 .photo              {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .photo_box          {
 	background-color: #eae8e5;
 	}
 .photo_tag          {
 	color           : #000000;
-	font            : 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 10pt Arial, sans-serif;
 	}
 .small,small        {
 	color           : #000000;
-	font            : 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+	font            : 8pt Arial, sans-serif;
 	}
 
 /* Barra izquierda */
@@ -357,7 +357,7 @@ div.horario1             { /* Lunes a Viernes\ \9:30 d... */
     top             : 308.25pt;
     width           :  97.50pt;
     height          :  50.25pt;
-    font            : bold 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+    font            : bold 8pt Arial, sans-serif;
     color           : #2c445c;
     text-align      : center;
     }
@@ -367,7 +367,7 @@ div.horario2             { /* &nbsp;Lunes a Jueves\ \T... */
     top             : 458.25pt;
     width           : 102.00pt;
     height          :  62.25pt;
-    font            : bold 8pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+    font            : bold 8pt Arial, sans-serif;
     color           : #2c445c;
     text-align      : center;
     }
@@ -401,7 +401,7 @@ span.barra2             { /* patrodent001005.gif */
     top             : 390.75pt;
     }
 h4.citas              { /* CITAS */
-    font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+    font            : bold 14pt Arial, sans-serif;
     text-align      : center;
     position        : absolute;
     left            :   9.75pt;
@@ -410,7 +410,7 @@ h4.citas              { /* CITAS */
     height          :  20.25pt;
     }
 h4.consulta              { /* CONSULTA */
-    font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+    font            : bold 14pt Arial, sans-serif;
     text-align      : center;
     position        : absolute;
     left            :  11.25pt;
@@ -477,7 +477,7 @@ div#page            { /* Page Holder */
     margin-right    : auto;
     }
 div.info             { /* La clínica dental de la ... */
-    font            : 11pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+    font            : 11pt Arial, sans-serif;
     text-align      : justify;
     position        : absolute;
     left            : 116.25pt;
@@ -499,7 +499,7 @@ div.volver              { /* Volver       */
     top             : 606.00pt;
     width           :  59.25pt;
     height          :  15.75pt;
-    font            : bold 10pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+    font            : bold 10pt Arial, sans-serif;
     color           : #972508;
     text-align      : center;
     }
@@ -507,7 +507,7 @@ div.volver              { /* Volver       */
     top             : 147.75pt;
     }
 .titulo2               { /* Plano de Situación */
-    font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
+    font            : bold 14pt Arial, sans-serif;
     text-align      : center;
     position        : absolute;
     left            : 105.00pt;
