--- a/html/css/patrodent.css
+++ b/html/css/patrodent.css
@@ -323,6 +323,9 @@ h1.logo             { /* Patro */
     font            : bold 30pt 'Bradley Hand ITC';
     color           : #008000;
     }
+h1.logo a {
+    color           : #008000;
+}
 div.dent             { /* DENT */
     position        : absolute;
     left            :  93.75pt;
