--- a/v2/patrodent/templates/base.html
+++ b/v2/patrodent/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/grid.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/animate-flip.css" type="text/css" media="screen">
    {% endblock %}
    {% block js %}
     <script src="{{ STATIC_URL }}js/jquery-1.6.3.min.js" type="text/javascript"></script>
@@ -18,6 +19,24 @@
     <script src="{{ STATIC_URL }}js/script.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/Angelina_400.font.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        (function($){
+            $(document).ready(function () {
+                var candado = false;
+                $("h1").mouseenter(function() {
+                    if (!candado) {
+                        candado = true;
+                        $(this).addClass("animated flip");
+                        var that = this;
+                        setTimeout(function () {
+                                    $(that).removeClass("animated flip");
+                                    candado = false;
+                        }, 2000);
+                    }
+                });
+            });
+          })(jQuery);
+    </script>
    {% endblock %}
    {% block iejs %}
     <!--[if lt IE 7]>
@@ -40,7 +59,11 @@
         <div class="main">
             <div class="container_24">
                 <div class="grid_24">
-                    <h1><a href="index.html"></a></h1>
+                    <h1 class="sign">
+                        <a href="index.html">
+                            Clinica Dental Patrodent
+                        </a>
+                    </h1>
                     <div class="fright">
                         <div class="slogon">
                             <div class="tel">Call Toll-Free &nbsp;<span>1-800-559-65-80</span></div>
