--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -18,12 +18,13 @@
                                     <h4>Performing Cosmetic <span>Dentistry Miracles</span></h4>
                                     <h6 class="p2">Welcome</h6>
                                     <p class="text-1">Donec acumsan malesuada orcidonec sitmet erolorem isum dolor amet incon. Adipiscing elit maurise phartra magn in ccumsan. Malesuada orcdonec umet lorem. <br />Malesg elit mauris sifer mentum. Tellus dolor, dapibus eget, elementum. </p>
-                                    <a class="sign" href="index-1.html">Our Team</a>
+                                    <a class="sign" href="index-1.html">Patrocinio Gomez</a>
                                 </div>
                                 <div class="grid_14 omega">
                                     <div class="slider-wrapper">
                                         <div class="slider">
                                             <ul class="items">
+                                                <li><img src="{{ STATIC_URL }}images/logo_galeria.png" alt=""></li>
                                                 <li><img src="{{ STATIC_URL }}images/image1.jpg" alt=""></li>
                                                 <li><img src="{{ STATIC_URL }}images/image2.jpg" alt=""></li>
                                                 <li><img src="{{ STATIC_URL }}images/image3.jpg" alt=""></li>
