--- a/trunk/v2/patrodent/templates/base.html
+++ b/trunk/v2/patrodent/templates/base.html
@@ -66,8 +66,8 @@
                     </h1>
                     <div class="fright">
                         <div class="slogon">
-                            <div class="tel">Call Toll-Free &nbsp;<span>1-800-559-65-80</span></div>
-                            Need a Dentist? We’re Here for You 24 Hours
+                            <div class="tel">Llamanos <span>954 21 14 22</span></div>
+                            Estamos disponibles de 9 a 21 horas
                         </div>
                         <div class="clear"></div>
                         <nav>
