--- a/trunk/v2/patrodent/templates/index.html
+++ b/trunk/v2/patrodent/templates/index.html
@@ -15,7 +15,7 @@
                         <div class="slider-bottom p5">
                             <div class="wrapper bot-pad">
                                 <div class="alpha prefix_1 grid_9">
-                                    <h4>Performing Cosmetic <span>Dentistry Miracles</span></h4>
+                                    <h4>Clínica Dental Patrodent</h4>
                                     <h6 class="p2">Welcome</h6>
                                     <p class="text-1">Donec acumsan malesuada orcidonec sitmet erolorem isum dolor amet incon. Adipiscing elit maurise phartra magn in ccumsan. Malesuada orcdonec umet lorem. <br />Malesg elit mauris sifer mentum. Tellus dolor, dapibus eget, elementum. </p>
                                     <a class="sign" href="index-1.html">Patrocinio Gomez</a>
