Formulario de contacto inicial

--- a/trunk/v2/patrodent/templates/formulario_contacto.html
+++ b/trunk/v2/patrodent/templates/formulario_contacto.html
@@ -197,9 +197,7 @@ if  ((document.getElementById('id123-control'+c_id+'-1').value!='')&&(document.g
     document.getElementById('id123-control'+c_id).value=document.getElementById('id123-control'+c_id+'-1').value+'/'+document.getElementById('id123-control'+c_id+'-2').value+'/'+document.getElementById('id123-control'+c_id+'-3').value;
 }
 //-->
-</script>
-
-<form  class="form" onsubmit="RefreshFrameHeight(1); return true;" action="http://www.123contactform.com/form-283841/Contact-Form" id="mainform123" method="post" enctype="multipart/form-data">
+</script><form  class="form" onsubmit="RefreshFrameHeight(1); return true;" action="http://www.123contactform.com/form-283841/Patrodent" id="mainform123" method="post" enctype="multipart/form-data">
 <input type="hidden" name="action" value="verify"/><input type="hidden" name="special_autoresponder" id="special_autoresponder" value=""/><input type="hidden" name="language" value="en"/><input type="hidden" name="languageChanged" value="no"/><div class="class123_maintable maintable_centered" style="min-width: 250px; " >
 
 <!-- Form headline begins -->
